[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'wqb'
version = '0.2.1'
authors = [{ name = 'Rocky Haotian Du', email = 'qq2712479005@gmail.com' }]
description = 'A better machine lib.'
license = { file = 'LICENSE' }
readme = 'README.md'
requires-python = '>=3.11'
dependencies = ['requests']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

[project.urls]
repository = 'https://github.com/rocky-d/wqb'

[tool.setuptools.packages.find]
include = ['wqb']
